# kendra-filter-tests

./: README.md  pyproject.toml
assets/s3/: memgpt.pdf.metadata.json  mrl.pdf.metadata.json
examples/: s3-kendra.ipynb
