[tool.poetry]
name = "kendra-filter-tests"
version = "0.1.0"
description = ""
authors = ["jjovalle99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.34.144"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
